# libjunk

./: CMakeLists.txt  LICENSE
include/junk/: network.h  queue.h  random.h  test.h  vector.h
src/: CMakeLists.txt  network.c  queue.c  random.c  test.c  vector.c
tests/: CMakeLists.txt  test_queue.c  test_random.c  test_vector.c
