add_executable(test_vector test_vector.c)
target_link_libraries(test_vector PRIVATE junk)
set_target_properties(test_vector PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests/")
target_include_directories(test_vector PRIVATE ../include)
add_test(NAME test_vector COMMAND "${CMAKE_BINARY_DIR}/tests/test_vector")

add_executable(test_random test_random.c)
target_link_libraries(test_random PRIVATE junk)
set_target_properties(test_random PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests/")
target_include_directories(test_random PRIVATE ../include)
add_test(NAME test_random COMMAND "${CMAKE_BINARY_DIR}/tests/test_random")
